[gd_scene load_steps=18 format=3 uid="uid://dbt4fsti77io6"]

[ext_resource type="Script" path="res://Scenes/Enemy/enemy_tank_sfsm.gd" id="1_aw44w"]
[ext_resource type="Texture2D" uid="uid://h0wj3x8pp5om" path="res://assets/tank/tankBody_blue_outline.png" id="2_ug23k"]
[ext_resource type="PackedScene" uid="uid://x76g4vchvgp4" path="res://Scenes/Component/weapon_component.tscn" id="3_dem55"]
[ext_resource type="PackedScene" uid="uid://bvctw0e2yuqvs" path="res://Scenes/Object/enemy_bullet.tscn" id="4_60l01"]
[ext_resource type="Texture2D" uid="uid://cmegk2lm6ruts" path="res://assets/tank/tankBlue_barrel3_outline.png" id="5_oslex"]
[ext_resource type="PackedScene" uid="uid://d2wvhn6pfhm6w" path="res://Scenes/Component/hurt_box_component.tscn" id="7_djsj8"]
[ext_resource type="PackedScene" uid="uid://8pwhobx1swnv" path="res://Scenes/Component/health_component.tscn" id="8_oyvuc"]
[ext_resource type="PackedScene" uid="uid://cn38yaihoeao" path="res://Scenes/Component/detect_component.tscn" id="9_g6h1n"]
[ext_resource type="PackedScene" uid="uid://bcx2gtiv30m8d" path="res://Scenes/Component/trail_compoment.tscn" id="10_wv0qm"]

[sub_resource type="Shader" id="Shader_81u7w"]
code = "shader_type canvas_item;

uniform bool active;
uniform vec3 flash_color : source_color = vec3(1.0);


void fragment(){
	vec4 t = texture(TEXTURE, UV);
	if (active == true) {
		COLOR = vec4(flash_color, t.a);
	}
	
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1go47"]
resource_local_to_scene = true
shader = SubResource("Shader_81u7w")
shader_parameter/active = false
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_0svdm"]
radius = 19.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2u2a3"]
radius = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pny7j"]
radius = 350.0

[sub_resource type="Animation" id="Animation_k4ekd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_luhix"]
resource_name = "flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3edvn"]
_data = {
"RESET": SubResource("Animation_k4ekd"),
"flash": SubResource("Animation_luhix")
}

[node name="EnemyTankSFSM" type="CharacterBody2D" groups=["Enemy", "EnemyTank"]]
z_index = 1
material = SubResource("ShaderMaterial_1go47")
collision_layer = 64
collision_mask = 112
script = ExtResource("1_aw44w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0svdm")

[node name="Base" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("2_ug23k")

[node name="WeaponComponent" parent="." instance=ExtResource("3_dem55")]
cool_down = 0.8
bullet_scene = ExtResource("4_60l01")

[node name="Gun" parent="WeaponComponent" index="0"]
texture = ExtResource("5_oslex")

[node name="HurtBoxComponent" parent="." instance=ExtResource("7_djsj8")]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("CircleShape2D_2u2a3")

[node name="HealthComponent" parent="." instance=ExtResource("8_oyvuc")]
max_health = 4.0

[node name="DetectComponent" parent="." instance=ExtResource("9_g6h1n")]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectComponent"]
shape = SubResource("CircleShape2D_pny7j")

[node name="TrailCompoment" parent="." instance=ExtResource("10_wv0qm")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3edvn")
}

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
limit_left = -128
limit_top = -128
limit_right = 2880
limit_bottom = 1470
limit_smoothed = true
position_smoothing_enabled = true

[editable path="WeaponComponent"]
